# NepalEntityService

./: .dockerignore  .flake8  .gitmodules  DATABASE_SETUP.md  Dockerfile  README.md  USAGE_EXAMPLES.md  pyproject.toml
.github/workflows/: README.md  ci.yml  migration-persistence.yml  migration-preview.yml
.kiro/specs/nepal-entity-service/: tasks.md
.kiro/specs/open-database-updates/: design.md  tasks.md
docs/: data-maintainer-guide.md  getting-started.md  index.md  migration-architecture.md  migration-contributor-guide.md  migration-maintainer-guide.md
docs/contributors/: contributor-guide.md  database-setup.md  design-patterns.md  scraping-service-guide.md  translation-guide.md
docs/templates/: documentation.html
entity-db/actor/: csv-importer.json  location-np-importer.json
entity-db/entity/person/: aananda-pokharel.json  abhishek-pratap-shah.json  agni-prasad-sapkota.json  ajaya-pratap-shah.json  amar-bahadur-thapa.json  ambika-sanwa.json  amod-prasad-upadhyay.json  anil-kumar-jha.json  arjun-jang-bahadur-singh.json  arjun-narasingha-kc.json  arjun-prasad-joshi.json  arjun-rai.json  arzu-rana-deuba.json  astalaxmi-shakya.json  baburam-bhattarai.json  bal-chandra-poudel.json  balaram-gharti-magar.json  balbir-prasad-chaudhary.json  bam-dev-gautam.json  barsaman-pun.json  bedanand-jha.json  bhagat-bahadur-baduwal.json  bhagwan-das-gupta.json  bhakta-bahadur-shah.json  bhanu-bhakta-joshi.json  bharat-kumar-shah.json  bhim-acharya.json  bhimsen-das-pradhan.json  bidhyanath-pokhrel.json  bidur-prasad-sapkota.json  bijay-kumar-gachhadar.json  bimalendra-nidhi.json  binayadhoj-chand.json  binda-pandey.json  binod-kumar-shah.json  bir-man-chaudhari.json  birendra-kumar-kanudiya.json  bishal-khadka.json  bishnu-prasad-chaudhari-tharu.json  bishnu-prasad-paudel.json  (+277 more)
examples/: KP Oli_scraped_wikipedia_data.json  README.md  batch_import.py  create_relationship.py  migration_manager_demo.py  update_entity.py  version_history.py  wikipedia_scraper_demo.py
migrations/: README.md
migrations/000-example-migration/: migrate.py
migrations/004-source-election-constituencies/: README.md  constituencies.csv  migrate.py
nes/: __init__.py  config.py
nes/api/: __init__.py  app.py  documentation.py  responses.py  server.py
nes/api/routes/: __init__.py  entities.py  health.py  relationships.py  schemas.py
nes/api/templates/: documentation.html
nes/cli/: __init__.py  migrate.py  translate.py
nes/core/: __init__.py  constraints.py  nepali_context.py
nes/core/identifiers/: __init__.py  builders.py  validators.py
nes/core/models/: __init__.py  base.py  entity.py  entity_type_map.py  location.py  organization.py  person.py  relationship.py  version.py
nes/core/utils/: __init__.py  devanagari.py  multilingual.py  phone_number.py  slug_helper.py
nes/database/: __init__.py  entity_database.py  file_database.py  in_memory_cached_read_database.py
nes/models/: __init__.py
nes/scraping/: __init__.py  parse_administrative_map2.py  parse_openknowledge_govt_bodies.py
nes/services/: __init__.py
nes/services/migration/: __init__.py  context.py  manager.py  runner.py
nes/services/publication/: __init__.py  graph.py  integrity.py  service.py
nes/services/scraping/: __init__.py  normalization.py  service.py  translation.py  web_scraper.py  wikipedia_scraper.py
nes/services/search/: __init__.py  service.py
nes2/: config.py
nes2/api/: app.py  documentation.py  responses.py  server.py
nes2/api/routes/: __init__.py  entities.py  health.py  relationships.py  schemas.py
nes2/cli/: __init__.py  migrate.py
nes2/core/: nepali_context.py
nes2/core/models/: __init__.py  base.py  entity.py  entity_type_map.py  relationship.py
nes2/core/utils/: __init__.py  devanagari.py  multilingual.py
nes2/database/: entity_database.py  file_database.py
nes2/models/: __init__.py
nes2/services/: __init__.py
nes2/services/migration/: __init__.py  context.py  manager.py  models.py  runner.py  validation.py
nes2/services/publication/: graph.py  integrity.py  service.py
nes2/services/scraping/: __init__.py  service.py  web_scraper.py
nes2/services/search/: service.py
notebooks/: 01_entity_management.ipynb  02_relationship_management.ipynb  03_data_import_workflow.ipynb  04_data_quality_analysis.ipynb  README.md
scripts/: README.md  check-format.sh  format.sh
tests/: __init__.py  conftest.py  test_config_database_url.py
tests/api/: __init__.py  test_api_endpoints.py  test_documentation.py
tests/api/routes/: test_locations.py  test_schemas.py
tests/cli/: test_cli.py  test_translate.py
tests/core/: __init__.py
tests/core/identifiers/: __init__.py  test_builders.py  test_validators.py
tests/core/models/: __init__.py  test_base.py  test_entity.py  (+5 more)
tests/database/: __init__.py  test_entity_database.py  test_file_database_caching.py  test_file_database_io_optimization.py  test_file_database_relationship_queries.py  test_file_database_search.py  test_file_database_version_listing.py  test_in_memory_cached_read_database.py
tests/fixtures/: __init__.py
tests/services/: __init__.py  test_migration_context.py  test_migration_manager.py  test_migration_runner.py  test_publication_service.py  test_relationship_graph.py  test_relationship_integrity.py  test_scraping_service.py  test_search_service.py
tests/utils/: __init__.py  helpers.py
tests2/: conftest.py  test_config_database_url.py
tests2/api/: test_api_endpoints.py  test_documentation.py
tests2/cli/: test_cli.py
tests2/database/: test_entity_database.py  test_file_database_caching.py  test_file_database_io_optimization.py  test_file_database_relationship_queries.py  test_file_database_search.py  test_file_database_version_listing.py
tests2/fixtures/: __init__.py  nepali_data.py
tests2/services/: test_migration_context.py  test_migration_manager.py  test_migration_runner.py  test_publication_service.py  test_relationship_graph.py  test_relationship_integrity.py  test_scraping_service.py  test_search_service.py
tests2/utils/: helpers.py
(+16112 files in other folders)
