[tool.poetry]
name = "nepal-entity-service"
version = "2.0.0"
description = "A comprehensive service for managing Nepali public entities"
authors = ["Damodar Dahal <damo94761@gmail.com>"]
readme = "README.md"
packages = [
    {include = "nes2"}
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.3"
click = "^8.1.0"

# API extras
fastapi = {extras = ["standard"], version = "^0.120.4", optional = true}
uvicorn = {version = "^0.24.0", optional = true}
markdown = {version = "^3.5.0", optional = true}

# Scraping extras
wikipedia = {version = "^1.4.0", optional = true}
google-cloud-aiplatform = {version = "^1.38.0", optional = true}
google-auth = {version = "^2.23.0", optional = true}

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "markdown"]
scraping = ["wikipedia", "google-cloud-aiplatform", "google-auth"]
all = ["fastapi", "uvicorn", "markdown", "wikipedia", "google-cloud-aiplatform", "google-auth"]

[tool.poetry.scripts]
nes2 = "nes2.cli:main"
nes2-api = "nes2.api.server:api"
nes2-dev = "nes2.api.server:dev"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
black = {extras = ["jupyter"], version = "^24.0.0"}
isort = "^5.13.0"
flake8 = "^7.0.0"


[tool.poetry.group.api.dependencies]
markdown = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | entity-db
  | nes-db
)/
'''

[tool.isort]
profile = "black"
skip = ["entity-db", "nes-db", ".venv"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests", "tests2"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]