[tool.poetry]
name = "nepal-entity-service"
version = "2.0.0"
description = "🇳🇵 Open Source, open data, and open API for managing Nepali public entities"
authors = ["Damodar Dahal <damo94761@gmail.com>"]
readme = "README.md"
license = "Hippocratic-3.0"
packages = [
    {include = "nes"}
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.3"
click = "^8.1.0"
python-dotenv = "^1.0.0"

# API extras
fastapi = {extras = ["standard"], version = "^0.120.4", optional = true}
uvicorn = {version = "^0.24.0", optional = true}
markdown = {version = "^3.5.0", optional = true}
pymdown-extensions = {version = "^10.0", optional = true}

# Scraping extras
wikipedia = {version = "^1.4.0", optional = true}
google-cloud-aiplatform = {version = "^1.38.0", optional = true}
google-auth = {version = "^2.23.0", optional = true}
nepali-date-utils = "^0.3.1"

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "markdown", "pymdown-extensions"]
scraping = ["wikipedia", "google-cloud-aiplatform", "google-auth"]
all = ["fastapi", "uvicorn", "markdown", "pymdown-extensions", "wikipedia", "google-cloud-aiplatform", "google-auth"]

[tool.poetry.scripts]
nes = "nes.cli:main"
nes-api = "nes.api.server:api"
nes-dev = "nes.api.server:dev"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
black = {extras = ["jupyter"], version = "^24.0.0"}
isort = "^5.13.0"
flake8 = "^7.0.0"
jupyter = "^1.1.1"
numpy = "^2.3.4"
pandas = "^2.3.3"
plotly = "^6.4.0"


[tool.poetry.group.api.dependencies]
markdown = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | entity-db
  | nes-db
)/
'''

[tool.isort]
profile = "black"
skip = ["entity-db", "nes-db", ".venv"]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*",
]